--- a/WOLtool.csproj
+++ b/WOLtool.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <DebugType>none</DebugType>
+	<PublishAot>true</PublishAot>
   </PropertyGroup>
 
 </Project>
